--- a/templates/01_generate_cluster_DE_genes.Rmd
+++ b/templates/01_generate_cluster_DE_genes.Rmd
@@ -169,3 +169,19 @@ for (cluster.id in sort(unique(s.obj@meta.data$seurat_clusters))){
   cat("\n \n")
 }
 ```
+
+## Top-12 cluster marker genes `DotPlot` {.tabset}
+Here we just show the top-12 genes (ranked by `avg_log2FC`) for each cluster. 
+
+```{r echo=FALSE, warning=FALSE, message=FALSE, results='asis', fig.width=14, fig.height=10}
+for (cluster.id in sort(unique(s.obj@meta.data$seurat_clusters))){
+  DefaultAssay(s.obj) <- "RNA"
+  cat(sprintf("### Cluster %s \n", cluster.id))
+  tmp.cluster.markers <- subset(cluster.markers, cluster.markers$cluster == cluster.id) %>% arrange(desc(avg_log2FC))
+  p <- DotPlot(object = s.obj, features = head(tmp.cluster.markers, 9)$gene)  
+  print(p)
+  cat("\n \n")
+}
+```
+
+
